--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,14 @@ packages = [{ include = "looplane" }]
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
 lmdb = "*"
+rich = { version = "^13.7.0", optional = true }
+click = { version = "^8.1.1", optional = true }
 
+[tool.poetry.extras]
+cli = ["rich", "click"]
 
-[build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+[tool.poetry.scripts]
+looplane = "looplane.cli.main:cli"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.16.1"
